@@ -6,13 +6,12 @@
  */
 
 import { Element as DomElement, Node, Range } from '@ephox/dom-globals';
-import { Arr, Option } from '@ephox/katamari';
+import { Arr, Option, Type } from '@ephox/katamari';
 import { Element, Insert, InsertAll, Traverse } from '@ephox/sugar';
 import DOMUtils from '../api/dom/DOMUtils';
-import Selection from '../api/dom/Selection';
 import TreeWalker from '../api/dom/TreeWalker';
 import Editor from '../api/Editor';
-import { FormatAttrOrStyleValue, FormatVars, RemoveFormat } from '../api/fmt/Format';
+import { FormatAttrOrStyleValue, FormatVars, RemoveFormatPartial } from '../api/fmt/Format';
 import * as Settings from '../api/Settings';
 import Tools from '../api/util/Tools';
 import * as Bookmarks from '../bookmark/Bookmarks';
@@ -30,13 +29,11 @@ const MCE_ATTR_RE = /^(src|href|style)$/;
 const each = Tools.each;
 const isEq = FormatUtils.isEq;
 
-const isTableCell = function (node) {
-  return /^(TH|TD)$/.test(node.nodeName);
-};
+const isTableCell = (node: Node) => /^(TH|TD)$/.test(node.nodeName);
 
 const isChildOfInlineParent = (dom: DOMUtils, node: Node, parent: Node): boolean => dom.isChildOf(node, parent) && node !== parent && !dom.isBlock(parent);
 
-const getContainer = function (ed: Editor, rng: RangeLikeObject, start?: boolean) {
+const getContainer = (ed: Editor, rng: RangeLikeObject, start?: boolean) => {
   let container: Node, offset: number;
 
   container = rng[start ? 'startContainer' : 'endContainer'];
@@ -65,7 +62,7 @@ const getContainer = function (ed: Editor, rng: RangeLikeObject, start?: boolean
   return container;
 };
 
-const wrap = function (dom: DOMUtils, node: Node, name: string, attrs?: Record<string, string>) {
+const wrap = (dom: DOMUtils, node: Node, name: string, attrs?: Record<string, string>) => {
   const wrapper = dom.create(name, attrs);
 
   node.parentNode.insertBefore(wrapper, node);
@@ -99,7 +96,7 @@ const wrapWithSiblings = (dom: DOMUtils, node: Node, next: boolean, name: string
  * @param {Object} format Format object o match with.
  * @return {boolean} true/false if the format matches.
  */
-const matchName = function (dom: DOMUtils, node: Node, format) {
+const matchName = (dom: DOMUtils, node: Node, format: RemoveFormatPartial) => {
   // Check for inline match
   if (isEq(node, format.inline)) {
     return true;
@@ -116,11 +113,9 @@ const matchName = function (dom: DOMUtils, node: Node, format) {
   }
 };
 
-const isColorFormatAndAnchor = function (node: Node, format) {
-  return format.links && node.nodeName === 'A';
-};
+const isColorFormatAndAnchor = (node: Node, format: RemoveFormatPartial) => format.links && node.nodeName === 'A';
 
-const find = function (dom: DOMUtils, node: Node, next: boolean, inc?: boolean) {
+const find = (dom: DOMUtils, node: Node, next: boolean, inc?: boolean) => {
   node = FormatUtils.getNonWhiteSpaceSibling(node, next, inc);
   return !node || (node.nodeName === 'BR' || dom.isBlock(node));
 };
@@ -143,7 +138,7 @@ const find = function (dom: DOMUtils, node: Node, next: boolean, inc?: boolean) 
  * @param {Object} format Format rule.
  * @return {Node} Input node.
  */
-const removeNode = function (ed: Editor, node: Node, format) {
+const removeNode = (ed: Editor, node: Node, format: RemoveFormatPartial) => {
   const parentNode = node.parentNode;
   let rootBlockElm;
   const dom = ed.dom, forcedRootBlock = Settings.getForcedRootBlock(ed);
@@ -164,7 +159,7 @@ const removeNode = function (ed: Editor, node: Node, format) {
       // Wrap the block in a forcedRootBlock if we are at the root of document
       if (parentNode === dom.getRoot()) {
         if (!format.list_block || !isEq(node, format.list_block)) {
-          each(Tools.grep(node.childNodes), function (node) {
+          Arr.each(Tools.grep(node.childNodes), (node) => {
             if (FormatUtils.isValid(ed, forcedRootBlock, node.nodeName.toLowerCase())) {
               if (!rootBlockElm) {
                 rootBlockElm = wrap(dom, node, forcedRootBlock);
@@ -200,7 +195,7 @@ const removeNode = function (ed: Editor, node: Node, format) {
  * @param {Node} compareNode Optional compare node, if specified the styles will be compared to that node.
  * @return {Boolean} True/false if the node was removed or not.
  */
-const removeFormat = function (ed: Editor, format: RemoveFormat, vars?: FormatVars, node?: Node, compareNode?: Node) {
+const removeFormat = (ed: Editor, format: RemoveFormatPartial, vars?: FormatVars, node?: Node, compareNode?: Node) => {
   let stylesModified: boolean;
   const dom = ed.dom;
 
@@ -212,10 +207,29 @@ const removeFormat = function (ed: Editor, format: RemoveFormat, vars?: FormatVa
   // "matchName" will made sure we're dealing with an element, so cast as one
   const elm = node as DomElement;
 
+  // Applies to styling elements like strong, em, i, u, etc. so that if they have styling attributes, the attributes can be kept but the styling element is removed
+  if (format.inline && Type.isArray(format.preserve_attributes)) {
+    // Remove all attributes except for the attributes specified in preserve_attributes
+    Arr.each(dom.getAttribs(elm), (attr) => {
+      if (attr) {
+        const attrName = attr.nodeName.toLowerCase();
+        if (!Arr.exists(format.preserve_attributes, (pAttr) => pAttr === attrName)) {
+          dom.setAttrib(elm, attrName, '');
+        }
+      }
+    });
+    // Note: If there are no atrributes left, the element will be removed as normal at the end of the function
+    if (dom.getAttribs(elm).length > 0) {
+      // Conert inline element to span if necessary
+      ed.dom.rename(node, 'span');
+      return true;
+    }
+  }
+
   // Should we compare with format attribs and styles
   if (format.remove !== 'all') {
     // Remove styles
-    each(format.styles, function (value: FormatAttrOrStyleValue, name: string) {
+    each(format.styles, (value: FormatAttrOrStyleValue, name: string) => {
       value = FormatUtils.normalizeStyleValue(dom, FormatUtils.replaceVars(value, vars), name);
 
       // Indexed array
@@ -238,8 +252,8 @@ const removeFormat = function (ed: Editor, format: RemoveFormat, vars?: FormatVa
     }
 
     // Remove attributes
-    each(format.attributes, function (value: FormatAttrOrStyleValue, name: string) {
-      let valueOut;
+    each(format.attributes, (value: FormatAttrOrStyleValue, name: string) => {
+      let valueOut: string;
 
       value = FormatUtils.replaceVars(value, vars);
 
@@ -256,7 +270,7 @@ const removeFormat = function (ed: Editor, format: RemoveFormat, vars?: FormatVa
           if (value) {
             // Build new class value where everything is removed except the internal prefixed classes
             valueOut = '';
-            each(value.split(/\s+/), function (cls) {
+            Arr.each(value.split(/\s+/), (cls) => {
               if (/mce\-\w+/.test(cls)) {
                 valueOut += (valueOut ? ' ' : '') + cls;
               }
@@ -285,7 +299,7 @@ const removeFormat = function (ed: Editor, format: RemoveFormat, vars?: FormatVa
     });
 
     // Remove classes
-    each(format.classes, function (value) {
+    each(format.classes, (value) => {
       value = FormatUtils.replaceVars(value, vars);
 
       if (!compareNode || dom.hasClass(compareNode, value)) {
@@ -310,17 +324,15 @@ const removeFormat = function (ed: Editor, format: RemoveFormat, vars?: FormatVa
   }
 };
 
-const findFormatRoot = function (editor: Editor, container: Node, name: string, vars: FormatVars, similar: boolean) {
-  let formatRoot;
+const findFormatRoot = (editor: Editor, container: Node, name: string, vars: FormatVars, similar: boolean) => {
+  let formatRoot: Node;
 
   // Find format root
-  each(FormatUtils.getParents(editor.dom, container.parentNode).reverse(), function (parent) {
-    let format;
-
+  Arr.each(FormatUtils.getParents(editor.dom, container.parentNode).reverse(), (parent) => {
     // Find format root element
     if (!formatRoot && parent.id !== '_start' && parent.id !== '_end') {
       // Is the node matching the format we are looking for
-      format = MatchFormat.matchNode(editor, parent, name, vars, similar);
+      const format = MatchFormat.matchNode(editor, parent, name, vars, similar);
       if (format && format.split !== false) {
         formatRoot = parent;
       }
@@ -330,18 +342,18 @@ const findFormatRoot = function (editor: Editor, container: Node, name: string, 
   return formatRoot;
 };
 
-const wrapAndSplit = function (editor: Editor, formatList, formatRoot: Node, container: Node, target: Node, split: boolean, format, vars: FormatVars) {
-  let parent, clone, lastClone, firstClone, i, formatRootParent;
+const wrapAndSplit = (editor: Editor, formatList: RemoveFormatPartial[], formatRoot: Node, container: Node, target: Node, split: boolean, format: RemoveFormatPartial, vars: FormatVars) => {
+  let clone, lastClone: Node, firstClone: Node;
   const dom = editor.dom;
 
   // Format root found then clone formats and split it
   if (formatRoot) {
-    formatRootParent = formatRoot.parentNode;
+    const formatRootParent = formatRoot.parentNode;
 
-    for (parent = container.parentNode; parent && parent !== formatRootParent; parent = parent.parentNode) {
+    for (let parent = container.parentNode; parent && parent !== formatRootParent; parent = parent.parentNode) {
       clone = dom.clone(parent, false);
 
-      for (i = 0; i < formatList.length; i++) {
+      for (let i = 0; i < formatList.length; i++) {
         if (removeFormat(editor, formatList[i], vars, clone, clone)) {
           clone = 0;
           break;
@@ -377,26 +389,25 @@ const wrapAndSplit = function (editor: Editor, formatList, formatRoot: Node, con
   return container;
 };
 
-const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Node | Range, similar?) {
-  const formatList = ed.formatter.get(name), format = formatList[0];
-  let bookmark, rng, contentEditable = true;
+const remove = (ed: Editor, name: string, vars?: FormatVars, node?: Node | Range, similar?: boolean) => {
+  const formatList = ed.formatter.get(name) as RemoveFormatPartial[];
+  const format = formatList[0];
+  let contentEditable = true;
   const dom = ed.dom;
-  const selection: Selection = ed.selection;
+  const selection = ed.selection;
 
-  const splitToFormatRoot = function (container: Node) {
+  const splitToFormatRoot = (container: Node) => {
     const formatRoot = findFormatRoot(ed, container, name, vars, similar);
     return wrapAndSplit(ed, formatList, formatRoot, container, container, true, format, vars);
   };
 
-  const isRemoveBookmarkNode = function (node: Node) {
-    // Make sure to only check for bookmarks created here (eg _start or _end)
-    // as there maybe nested bookmarks
-    return Bookmarks.isBookmarkNode(node) && NodeType.isElement(node) && (node.id === '_start' || node.id === '_end');
-  };
+  // Make sure to only check for bookmarks created here (eg _start or _end)
+  // as there maybe nested bookmarks
+  const isRemoveBookmarkNode = (node: Node) => Bookmarks.isBookmarkNode(node) && NodeType.isElement(node) && (node.id === '_start' || node.id === '_end');
 
   // Merges the styles for each node
-  const process = function (node: Node) {
-    let children: Node[], i, l, lastContentEditable, hasContentEditableState;
+  const process = (node: Node) => {
+    let children: Node[], lastContentEditable: boolean, hasContentEditableState: boolean;
 
     // Node has a contentEditable value
     if (NodeType.isElement(node) && dom.getContentEditable(node)) {
@@ -410,7 +421,7 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
 
     // Process current node
     if (contentEditable && !hasContentEditableState) {
-      for (i = 0, l = formatList.length; i < l; i++) {
+      for (let i = 0; i < formatList.length; i++) {
         if (removeFormat(ed, formatList[i], vars, node, node)) {
           break;
         }
@@ -420,9 +431,9 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
     // Process the children
     if (format.deep) {
       if (children.length) {
-        for (i = 0, l = children.length; i < l; i++) {
-          process(children[i]);
-        }
+        Arr.each(children, (child) => {
+          process(child);
+        });
 
         if (hasContentEditableState) {
           contentEditable = lastContentEditable; // Restore last contentEditable state from stack
@@ -431,7 +442,7 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
     }
   };
 
-  const unwrap = function (start?: boolean) {
+  const unwrap = (start?: boolean) => {
     const node = dom.get(start ? '_start' : '_end');
     let out = node[start ? 'firstChild' : 'lastChild'];
 
@@ -452,8 +463,8 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
     return out;
   };
 
-  const removeRngStyle = function (rng: Range) {
-    let startContainer, endContainer;
+  const removeRngStyle = (rng: Range) => {
+    let startContainer: Node, endContainer: Node;
     const commonAncestorContainer = rng.commonAncestorContainer;
 
     let expandedRng = ExpandRange.expandRng(ed, rng, formatList, true);
@@ -533,22 +544,25 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
     }
 
     // Remove items between start/end
-    RangeWalk.walk(dom, expandedRng, function (nodes) {
-      each(nodes, function (node) {
+    RangeWalk.walk(dom, expandedRng, (nodes) => {
+      Arr.each(nodes, (node) => {
         process(node);
 
-        // Remove parent span if it only contains text-decoration: underline, yet a parent node is also underlined.
-        if (NodeType.isElement(node) && ed.dom.getStyle(node, 'text-decoration') === 'underline' &&
-          node.parentNode && FormatUtils.getTextDecoration(dom, node.parentNode) === 'underline') {
-          removeFormat(ed, {
-            deep: false,
-            exact: true,
-            inline: 'span',
-            styles: {
-              textDecoration: 'underline'
-            }
-          }, null, node);
-        }
+        // Remove parent span if it only contains text-decoration, yet a parent node also has the same text decoration.
+        const textDecorations = [ 'underline', 'line-through', 'overline' ];
+        Arr.each(textDecorations, (decoration) => {
+          if (NodeType.isElement(node) && ed.dom.getStyle(node, 'text-decoration') === decoration &&
+            node.parentNode && FormatUtils.getTextDecoration(dom, node.parentNode) === decoration) {
+            removeFormat(ed, {
+              deep: false,
+              exact: true,
+              inline: 'span',
+              styles: {
+                textDecoration: decoration
+              }
+            }, null, node);
+          }
+        });
       });
     });
   };
@@ -556,7 +570,7 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
   // Handle node
   if (node) {
     if (FormatUtils.isNode(node)) {
-      rng = dom.createRng();
+      const rng = dom.createRng();
       rng.setStartBefore(node);
       rng.setEndAfter(node);
       removeRngStyle(rng);
@@ -569,7 +583,7 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
 
   if (dom.getContentEditable(selection.getNode()) === 'false') {
     node = selection.getNode();
-    for (let i = 0, l = formatList.length; i < l; i++) {
+    for (let i = 0; i < formatList.length; i++) {
       if (formatList[i].ceFalseOverride) {
         if (removeFormat(ed, formatList[i], vars, node, node)) {
           break;
@@ -581,7 +595,7 @@ const remove = function (ed: Editor, name: string, vars?: FormatVars, node?: Nod
   }
 
   if (!selection.isCollapsed() || !format.inline || dom.select('td[data-mce-selected],th[data-mce-selected]').length) {
-    bookmark = GetBookmark.getPersistentBookmark(ed.selection, true);
+    const bookmark = GetBookmark.getPersistentBookmark(ed.selection, true);
     removeRngStyle(selection.getRng());
     selection.moveToBookmark(bookmark);
 
